// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeMultiselectLabel renders with checked prop "indeterminate" provided 1`] = `
<div
  className="TreeMultiselectLabel"
>
  <Bem
    block="TreeMultiselectLabel"
    elem="control-container"
  >
    <ToggleExpander
      expanded={false}
      mix={
        Object {
          "block": "TreeMultiselectLabel",
          "elem": "toggler-icon",
        }
      }
      onClick={[MockFunction]}
    />
  </Bem>
  <TristateCheckBox
    checked="indeterminate"
    onChange={[MockFunction]}
    size="s"
    theme="normal"
  />
  <Bem
    block="TreeMultiselectLabel"
    elem="label-content"
  >
    Марокко
  </Bem>
</div>
`;

exports[`TreeMultiselectLabel renders with checked prop "yes" provided 1`] = `
<div
  className="TreeMultiselectLabel"
>
  <Bem
    block="TreeMultiselectLabel"
    elem="control-container"
  >
    <ToggleExpander
      expanded={false}
      mix={
        Object {
          "block": "TreeMultiselectLabel",
          "elem": "toggler-icon",
        }
      }
      onClick={[MockFunction]}
    />
  </Bem>
  <TristateCheckBox
    checked="yes"
    onChange={[MockFunction]}
    size="s"
    theme="normal"
  />
  <Bem
    block="TreeMultiselectLabel"
    elem="label-content"
  >
    Марокко
  </Bem>
</div>
`;

exports[`TreeMultiselectLabel renders with collapsed prop provided 1`] = `
<div
  className="TreeMultiselectLabel"
>
  <Bem
    block="TreeMultiselectLabel"
    elem="control-container"
  >
    <ToggleExpander
      expanded={true}
      mix={
        Object {
          "block": "TreeMultiselectLabel",
          "elem": "toggler-icon",
        }
      }
      onClick={[MockFunction]}
    />
  </Bem>
  <TristateCheckBox
    checked="no"
    onChange={[MockFunction]}
    size="s"
    theme="normal"
  />
  <Bem
    block="TreeMultiselectLabel"
    elem="label-content"
  >
    Марокко
  </Bem>
</div>
`;

exports[`TreeMultiselectLabel renders with loading prop provided 1`] = `
<div
  className="TreeMultiselectLabel"
>
  <Bem
    block="TreeMultiselectLabel"
    elem="control-container"
  >
    <spin2
      mix={
        Object {
          "block": "TreeMultiselectLabel",
          "elem": "loader",
        }
      }
      progress={true}
      size="xxs"
    />
  </Bem>
  <TristateCheckBox
    checked="no"
    onChange={[MockFunction]}
    size="s"
    theme="normal"
  />
  <Bem
    block="TreeMultiselectLabel"
    elem="label-content"
  >
    Марокко
  </Bem>
</div>
`;
